--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,118 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: #06365F
+light blue: #1C5380
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-image: url("/home/david/Documentos/Ironhack/week1_day1/lab-css-instagram-clone/images/bgtile.png");
+  background-size: 2000px 400px;
+  background-repeat: no-repeat;
+}
+
+#instagram {
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ margin: 200px 200px 100px 200px;
+}
+
+#second-column {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 600px;
+}
+
+#phone-img {
+  margin-right: 20px;
+}
+
+#title-login {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+#login {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background: linear-gradient(180deg, rgba(121,167,207,1) 0%, rgba(58,104,144,1) 64%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 40px;
+  width: 100px;
+  
+}
+
+.login-btn {
+  text-decoration: none;
+  color: white;
+}
+
+#text {
+  background-image: url("/home/david/Documentos/Ironhack/week1_day1/lab-css-instagram-clone/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10px;
+  font-size: 1.1em;
+  margin-bottom: 30px;
+}
+
+h1 {
+  margin: 20px;
+  font-size: 2em;
+  color: #06365F;
+}
+
+p {
+  margin: 5px 20px;
+}
+
+#iphone-android {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#iphone-android img {
+  margin: 0 60px;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+footer li {
+  margin: 20px;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+footer a {
+  text-decoration: none;
+  color: #06365F;
+}
+
+.copy {
+  color: gray;
+  font-weight: bold;
 }
