--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,71 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
 }
+h2{
+  color: #1c5380;
+  font-size: 32px;
+}
+.header{
+  background-color: #06365f;
+  height: 300px;
+}
+
+.button{
+  background-color: #226caa;
+  border-radius: 5px;
+  padding: 8px 10px 7px 10px;
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 70px;
+}
+
+.logo-header{
+
+}
+.logo{
+  margin-left: 20px;
+  margin-right: 70px  ;
+}
+
+#login{
+    position: relative;
+    bottom: 4px;
+    padding-left: 6px;
+    color: antiquewhite;
+}
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 100px;
+}
+
+.phones{
+  margin-top: 100px;
+}
+.content{
+max-width: 600px;
+margin-left: 30px; 
+background-size: contain;
+padding: 10px 40px 15px 40px;
+background-color: white;
+border-radius: 3px;
+}
+
+.social{
+  margin-left: 70px;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-around;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hell{
+  color: #1c5380;
+  padding: 20px;
+}
+
