--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+/* General styles */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+strong {
+  font-weight: 700;
+}
+
+
+/* apply general layout to main */
+
+.blue-background {
+  position: relative;
+  background: linear-gradient(#345b84, #51789f);
+  height: 33vh;
+}
+
+.container {
+  position: absolute;
+  bottom: 8.125rem;
+  margin: 3rem 3rem;
+  width: 100%;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* all styles for the principal section */
+
+section {
+  padding: 2rem;
+}
+
+section .logo-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-header button {
+  padding: 0.8rem 1rem;
+  background: linear-gradient(hsl(207,64.1%,30.6%), hsl(207,64.1%,20.6%));
+  color: white;
+  font-weight: 500;
+  border: 1px solid hsl(207,64.1%,20.6%);
+}
+
+
+/* styles for main text block */
+
+section article {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid grey;
+  margin-top: 2rem;
+  padding: 2rem;
+  background-color: white;
+}
+
+section .text-block {
+  max-width: 450px;
+}
+
+section .gettheapp {
+  margin: 2rem 0;
+}
+
+
+/* style the footer */
+
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+
+footer li {
+  list-style-type: none;
+  padding: 0 0.8rem;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: lightgrey;
+}
+
+footer a {
+  text-decoration: none;
+  color: hsl(207,64.1%,30.6%);
 }
