--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,36 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin:10%;
+  margin-bottom: 0%;
+  background-image: url(/images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: 100% 50%;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.phone-image{
+  margin-right: 170px;
+}
+
+.brand {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 70px;
+}
+
+.content{
+  background-image: url(/images/frame.png);
+  background-color: whitesmoke;
+  background-size: cover;
+  padding: 30px;
+}
+
+.nav-bottom {
+  margin-top: 160px;
+  text-align: center;
 }
