--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,85 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  display:flex;
+  flex-direction: column;
+  padding: 100px;
+  justify-content: center;
+  align-items: center;
+  line-height: 25px;
+}
+header {
+  display: flex;
+  align-items: center;
+}
+
+.phones {
+  width: 100%;
+  height: 100%;
+}
+ h3 {
+   font-weight: 800;
+   color: #0e375d;
+ }
+.homebutton {
+  display: flex;
+  width: 1000px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  text-transform: uppercase;
+  margin: 20px;
+  font-size: 10px;
+  font-weight: bolder;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bolder;
+}
+
+footer a {
+  margin: 10px;
+  text-decoration: none;
+  color: #0e375d;
+  font-weight: bolder;
+}
+
+.container {
+  display: flex;
+  background-color: #3b6488;
+  padding: 80px;
+  align-items: center;
+
+}
+.right-thingy {
+  width: 500px;
+  padding-left: 50px;
+  margin: 10px;
+
+}
+
+section {
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px 30px 10px 30px;
+}
+article {
+  padding-bottom: 30px;
+}
+
+.copyright {
+  color: lightslategray;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: bolder;
+}
+
+img[src *="android"] {
+  padding-left: 30px;
 }
