--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,91 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+h1 {
+  color:#06365f;
+}
+
+section {
+  height: 80vh;
+  padding: 80px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
+
+section > div {
+  width: 400px;
+  height: 600x;
+}
+
+.instaHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.instaHeader img {
+  width: 50%;
+}
+
+
+.instaFooter {
+  display: flex;
+}
+
+.instaHeader a {
+  border: 1px solid blue;
+}
+
+.login {
+  text-decoration: none;
+  padding: 5px;
+  color: white;
+  text-align: center;
+  background-color:#1c5380;
+
+}
+article {
+  background-image:url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 10px;
+  border-radius: 30px;
+}
+
+article div:nth-of-type(2) {
+  width: 60%;
+  
+}
+
+footer {
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+li {
+  color:#1c5380;
+  font-weight: 800;
+  list-style-type: none;
+  margin: 0 10px;
+}
+
+ul li:last-of-type {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
