--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background: linear-gradient(#345b84 0%, #51789f 35%, white 35%);
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
 }
 
 strong {
@@ -20,24 +24,13 @@ strong {
 
 /* apply general layout to main */
 
-.blue-background {
-  position: relative;
-  background: linear-gradient(#345b84, #51789f);
-  height: 40vh;
-}
-
-.container {
-  position: absolute;
-  top: 5rem;
-  margin: 3rem 3rem;
-  width: 100%;
-}
-
 main {
+  margin: 7rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 
 
 /* all styles for the principal section */
@@ -74,7 +67,7 @@ section article {
 }
 
 section h2 {
-  width: 55%;
+  max-width: 16rem;
   color: #1c5380;
 }
 
@@ -83,20 +76,25 @@ section .text-block {
 }
 
 section .gettheapp {
-  margin: 1rem 0;
+  margin-top: 1rem;
 }
 
 
 /* style the footer */
 
+footer {
+  padding: 1rem;
+}
+
 footer ul {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 footer li {
   list-style-type: none;
-  padding: 0 0.8rem;
+  padding: 1rem 1rem;
   text-transform: uppercase;
   font-size: 0.8rem;
   font-weight: 700;
