--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,94 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.left {
+  display: flex;
+  justify-content: flex-end;
+  /* background-color: red; */
+  width: 20%;
+  padding: 0 2rem 0 0;
+}
+
+.right {
+ display: flex;
+ flex-direction: column;
+ /* background-color: purple; */
+ width: 30%;
+}
+
+header {
+  /* background-color:yellow; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5rem 0 0.5rem;
+}
+
+#logo {
+  width: 250px;
+}
+
+.mainContent {
+  /* background-color: green; */
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 1rem 2rem 1rem 2rem;
+}
+
+#buttons {
+  padding: 3rem 0.5rem 0 0;
+}
+
+footer {
+  /* background-color: pink; */
+  width: 90%;
+  text-align: center;
+  color: #1c5380;
+}
+
+ul {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #CCCCCC;
+}
+
+li {
+  display: inline;
+  list-style: none;
+  padding: 0 2rem 0 0;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #1c5380;
+}
+
+h1 {
+  font-size: 1.8rem;
+  color: #06365f;
+  line-height: 1.2;
+}
+
+button {
+    display: flex;
+    font-weight: bold;
+    justify-content: space-between;
+    align-items: center;
+    background-image: linear-gradient(#73a2c9, #3f6d94);
+    padding: 0.6rem;
+    width: 6rem;
+    color: #FFF;
+    border: 1px solid #1c5380;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px #1c5380;
 }
