--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,76 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+
+.container {
+
+  display: flex;
+  padding: 80px;
+  
+}
+
+.subcontainer1{
+  background-color: lightgoldenrodyellow
+  
+
+}
+.subcontainer2{
+background-color: ;
+  
+}
+
+.block1 {
+  display: flex;
+  justify-content: space-between;
+	align-items: center;
+	align-content: stretch;
+  padding: 10px;
+
+
+  
+}
+.block1 img{
+height: 30px;
+
+}
+
+
+.block2 {
+background-image: url(/images/frame.png) ;
+background-repeat: no-repeat;
+background-size: cover;
+display: flex;
+flex-direction: column;
+padding: 16px;
+
+  
+}
+
+.block3 {
+  
+  display: flex;
+  justify-content: center;
+	align-items: center;
+	align-content: center;
+
+	
+
+}
+.block3 img{
+padding: 5px;
+
+}
+
+.block1 img{
+  
+}
+
+footer ul {
+
+  display: flex;  
+
 }
