--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,21 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  background-color: #1c5380;
+  display: flex;
+  flex: row flex-start;
+  border: 2px solid red ;
+  padding: 100px;
+  justify-content: center;
+}
+
+.logo > button {
+  background-color: #1c5380;
+  color: white; 
+}
+
+.footer {
+  color: #1c5380;
+}
