--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,117 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(180deg, #2670ac, #1c5380 40%, #FFFFFF 39%);
+  background-attachment:fixed;
+  background-repeat: no-repeat;
+  font-size: 22px;
+  display: relative;
 }
+
+#central-part {
+  margin: 10% 10% 0 10%;
+  display: absolute;
+}
+
+#phones {
+  display: block;
+  width: 30%;
+  float: left;
+}
+
+header {
+  display: flex;
+  width: 45%;
+  height: fit-content;
+  float: right;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15% 0 10%;
+}
+
+header > img {
+  height: 100px;
+}
+
+#login-button {
+  background: linear-gradient(0deg, rgba(28,83,128,1) 21%, rgba(48,139,214,1) 100%);;
+  border: #06365f 1px solid;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 7%;
+  padding: 2px 10px;
+  height: 80%;
+}
+
+#login-button p {
+  float: right;
+  margin-left: 15px;
+  padding-right: 5px;
+}
+
+#login-button img {
+  float: left;
+}
+
+main {
+  background-image: url("./images/frame.png");
+  background-repeat: no-repeat;
+  width: 45%;
+  float: right;
+  margin-top: 5%;
+  padding: 0 15% 10% 10%;
+}
+
+h2 {
+  color: #06365f;
+}
+
+main p {
+  margin-bottom: 8%;
+}
+#app-stores {
+  width: 80%;
+}
+
+#app-stores img {
+  margin-right: 30px;
+  height: 6.5vh;
+}
+
+footer {
+  width: 80%;
+  margin: 10% 10% 0 10%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-size: 18px;
+}
+
+ul {
+  list-style-type: none;
+  color: #06365f;
+  padding: 0 25px 0 0;
+  font-weight: bold;
+  float: left;
+}
+
+li {
+  display: inline-block;
+  padding-right: 25px;
+}
+
+footer p {
+  color: lightgray;
+  width: fit-content;
+  float: right;
+}
+
+p bold {
+  font-weight: bold;
+}
+
