--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,11 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+#background{
+  background-color: #1c5380;
+  width:100%;
+  height:40vh;
 }
