--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,103 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+  color: #06365f;
+}
+
+#blue-section {
+  background-image:linear-gradient(to bottom,rgb(28, 83, 128,0.7),rgb(28, 83, 128,1));
+  height: 370px;
+}
+
+#phones-div{
+  margin: -280px 40px 0px 40px
+}
+
+#phones-div img {
+  height: 500px;
+}
+
+#content-div {
+  width: 500px;
+  height: 500px;
+  margin: -280px 40px 0px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#log-in img {
+  height: 30px;
+}
+
+#log-in p {
+  color: white;
+  font-weight: bold;
+}
+
+#logos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#log-in {
+  height: 40px;
+  width: 120px;
+  border: 1px solid #1c5380;
+  border-radius: 3px;
+  background-image: linear-gradient(to bottom,rgb(28, 83, 128,0),rgb(28, 83, 128,1));;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#content-div #text {
+  margin-top: 20px;
+  background-color: white;
+  font-weight: normal; ;
+  padding: 5px 25px;
+  border-radius: 3px;
+  box-shadow: 30px;
+}
+
+#download-icons{
+  margin-top: 20px;
+}
+
+#middle-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  margin: 60px 300px
+}
+
+ul {
+  list-style: none;
+  font-size: smaller;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+ul a {
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+}
+
+#copyright {
+  color: lightgray;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+}
