--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,12 @@ h1 {
 }
 
 #blue-section {
-  background-image:linear-gradient(to bottom,rgb(28, 83, 128,0.7),rgb(28, 83, 128,0.9));
-  height: 370px;
+  background-image:linear-gradient(to bottom,rgb(28, 83, 128,0.65),rgb(28, 83, 128,0.9));
+  height:300px;
 }
 
 #phones-div{
-  margin: -280px 40px 0px 40px
+  margin: -180px 40px 0px 40px
 }
 
 #phones-div img {
@@ -29,7 +29,7 @@ h1 {
 #content-div {
   width: 500px;
   height: 500px;
-  margin: -280px 40px 0px 40px;
+  margin: -180px 40px 0px 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -53,9 +53,9 @@ h1 {
 #log-in {
   height: 40px;
   width: 100px;
-  border: 1px solid #1c5380;
   border-radius: 3px;
-  background-image: linear-gradient(to bottom,rgb(28, 83, 128,0),rgb(28, 83, 128,0.6));;
+  background-image: linear-gradient(to bottom,rgb(28, 83, 128,0.2),rgb(28, 83, 128,0));;
+  box-shadow: 0px 1px 2px 0px rgba(6,54,95,0.7);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
